force-app/main/default/objects/fr_Ticket__c/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>Company Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>