force-app/main/default/objects/fr_Ticket__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deleted in Freshdesk</inlineHelpText>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>