force-app/main/default/objects/fr_Ticket__c/fields/DueBy__c.field-meta.xml
<CustomField>
    <fullName>DueBy__c</fullName>
    <label>Due By</label>
    <type>DateTime</type>
</CustomField>