force-app/main/default/objects/fr_Ticket__c/fields/DueInFreshdesk__c.field-meta.xml
<CustomField>
    <fullName>DueInFreshdesk__c</fullName>
    <label>Due In Freshdesk</label>
    <type>DateTime</type>
</CustomField>