force-app/main/default/objects/fr_Ticket__c/fields/HasBeenEscalated__c.field-meta.xml
<CustomField>
    <fullName>HasBeenEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Escalated</label>
    <type>Checkbox</type>
</CustomField>