force-app/main/default/objects/fr_Ticket__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Urgent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>