force-app/main/default/objects/fr_Ticket__c/fields/RequesterEmail__c.field-meta.xml
<CustomField>
    <fullName>RequesterEmail__c</fullName>
    <label>Requester Email</label>
    <type>Email</type>
</CustomField>