force-app/main/default/objects/fr_Ticket__c/fields/RequesterId__c.field-meta.xml
<CustomField>
    <fullName>RequesterId__c</fullName>
    <label>Requester Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>