force-app/main/default/objects/fr_Ticket__c/fields/RequesterPhone__c.field-meta.xml
<CustomField>
    <fullName>RequesterPhone__c</fullName>
    <label>Requester Phone</label>
    <type>Phone</type>
</CustomField>