force-app/main/default/objects/fr_Ticket__c/fields/ResponderId__c.field-meta.xml
<CustomField>
    <fullName>ResponderId__c</fullName>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>