force-app/main/default/objects/fr_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>