force-app/main/default/objects/fr_Ticket__c/fields/TicketId__c.field-meta.xml
<CustomField>
    <fullName>TicketId__c</fullName>
    <externalId>true</externalId>
    <label>Ticket Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>