force-app/main/default/objects/fr_Ticket__c/fields/TwitterId__c.field-meta.xml
<CustomField>
    <fullName>TwitterId__c</fullName>
    <label>Twitter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>