force-app/main/default/objects/fr_Ticket__c/fields/UpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>UpdatedAt__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>